fix align text name seasons

--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,7 @@ body {
   }
 
   .season-one, .season-two {
-    padding-top: 90px;
+    padding-top: 85px;
     line-height: 7rem;
   }
 
